tests/rspack-test/configCases/errors/generator-generate-error/test.filter.js
"use strict";

const supportsWebAssembly = require("@rspack/test-tools/helper/legacy/supportsWebAssembly");

module.exports = () => supportsWebAssembly() && "FIXME: missing assets";
